--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,21 @@
     <modules>
         <module>producer</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <maxmem>1024m</maxmem>
+                    <meminitial>128m</meminitial>
+                </configuration>
+
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
