sending and receiving mobile data via kafka..

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>producer</module>
         <module>gsm-choice-grabber</module>
+        <module>gsm-choice-domain</module>
     </modules>
 
     <build>
