--- a/gsm-choice-grabber/pom.xml
+++ b/gsm-choice-grabber/pom.xml
@@ -23,9 +23,19 @@
             <version>1.7.22</version>
         </dependency>
         <dependency>
+            <groupId>com.dheeraj.kafka</groupId>
+            <artifactId>gsm-choice-domain</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.10.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.10.1.0</version>
         </dependency>
         <dependency>
             <groupId>io.protostuff</groupId>
