--- a/producer/pom.xml
+++ b/producer/pom.xml
@@ -23,6 +23,11 @@
             <version>1.7.22</version>
         </dependency>
         <dependency>
+            <groupId>com.dheeraj.kafka</groupId>
+            <artifactId>gsm-choice-domain</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>0.10.1.0</version>
