--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <modules>
-        <module>producer</module>
         <module>gsm-choice-grabber</module>
         <module>gsm-choice-domain</module>
+        <module>mobile-data-consumer</module>
     </modules>
 
     <build>
