--- a/gsm-choice-grabber/pom.xml
+++ b/gsm-choice-grabber/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>protostuff-runtime</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 </project>
