--- a/mobile-data-consumer/pom.xml
+++ b/mobile-data-consumer/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>protostuff-runtime</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 </project>
