--- a/gsm-choice-grabber/pom.xml
+++ b/gsm-choice-grabber/pom.xml
@@ -52,6 +52,16 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.jpountz.lz4</groupId>
+            <artifactId>lz4</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>1.1.4-M1</version>
+        </dependency>
     </dependencies>
 
 </project>
